--- a/Nina/partials/header.html
+++ b/Nina/partials/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-    <a href="/" data-nav="home" class="centre">
+    <a href="index.html" data-nav="home" class="centre">
       <img src="img/bookmark.svg" alt="logo">
     </a>
     <nav>
