--- a/Nevot/css/calendar.css
+++ b/Nevot/css/calendar.css
@@ -1,5 +1,3 @@
-/*Fichier CSS pour l'EDT*/
-
 #calendar-grid{
     background-color: var(--glass-bg-dark);
     background: var(--glass-bg-dark);
@@ -41,9 +39,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 2em;
     }
 }
-  
+
 .name{
     font-weight: bold;
     font-size: 1em;
@@ -51,11 +50,13 @@
 
 .location{
     font-weight: bold;
+    color: orange;
+    font-size: 0.8em;
 }
 
 .prof, .time{
-    color: var(--less-important-text);
     font-style: italic;
     font-size: 0.8em;
+    color: aquamarine;
 }
 
